email verify and bug fixing
