# src/types/auth.types.ts
@@ -4,6 +4,7 @@ import {
   forgotPasswordSchema,
   refreshTokenSchema,
   resetPasswordSchema,
+  verifyEmailSchema,
 } from "../modules/auth/auth.validation.js";
 import { z } from "zod";
 
@@ -12,11 +13,13 @@ export type LoginInput = z.infer<typeof loginSchema>;
 export type ForgotPasswordInput = z.infer<typeof forgotPasswordSchema>;
 export type ResetPasswordInput = z.infer<typeof resetPasswordSchema>;
 export type RefreshToken = z.infer<typeof refreshTokenSchema>;
+export type EmailVerify = z.infer<typeof verifyEmailSchema>;
 
 export interface JwtPayload {
   userId: string;
   email: string;
   role: string;
+  isActive: boolean;
   permissions: string[];
 }
 
